chore: CI fixes & downgrade to JDK 8